<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DisplayNeighbourActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
        <TextView
            android:id="@+id/nameWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:layout_alignBottom="@id/avatar"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:text="Name" />

        <LinearLayout
            android:id="@+id/about_me_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:tint="@color/pink"
                    app:srcCompat="@drawable/ic_location_white_24dp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:tint="@color/pink"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:tint="@color/pink"
                    app:srcCompat="@drawable/ic_web__white_24dp" />

                <TextView
                    android:id="@+id/socialNetWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_me_rl"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/aboutMeLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/about_me"/>

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/aboutMeLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:minHeight="150dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_favorite_neighbour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_anchor="@+id/avatar"
        app:layout_anchorGravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

</android.support.design.widget.CoordinatorLayout>